--- a/configurar_proyectos/CSS/style2.css
+++ b/configurar_proyectos/CSS/style2.css
@@ -19,6 +19,7 @@ h2{
     text-align: right;
 }
 h3{
+    font-family: monospace;
     text-decoration: underline;
     color: rgb(22, 2, 41);
     background-color: rgb(119, 161, 240);
