--- a/CSS/style.css
+++ b/CSS/style.css
@@ -91,6 +91,49 @@ h1 {
   .black{
    background-color: black;
   }
+  a {
+    width: 25px;
+  }
+  div {
+    width: 100%;
+    height: 200px;
+    overflow: scroll;
+  }
+  img {
+    width: 250px;
+  }
+  p {
+    background: #ffffff url("cerezas.png") no-repeat fixed center;
+  }
+
+  p {
+    background-color: rgb(0, 0, 0);
+  }
+  div {
+    background-image: url("cerezas.png");
+    background-position: center;
+    background-size: auto;
+    background-repeat: no-repeat;
+  }
+
+  button {
+    border: 2px dotted green;
+  }
+  div {
+    border: 1px solid #000000;
+  }
+  p {
+    border-right: 1px groove rgb(100,100,100);
+    border-left: 1px groove rgb(200,200,200);
+  }
+
+  button {
+    border-radius: 5px;
+  }
+
+
+
+
 
   
 
