--- a/CSS/navegacion-con-flex/style.css
+++ b/CSS/navegacion-con-flex/style.css
@@ -1,6 +1,8 @@
 .nav{
     background-color: rgb(82, 81, 81);
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .nav-title{
     font-family: cursive;
